--- a/src/app/notepad/note/add-note/add-note.component.html
+++ b/src/app/notepad/note/add-note/add-note.component.html
@@ -1,7 +1,3 @@
-<p>
-  add-notes
-</p>
-
 <form novalidate [formGroup]="noteForm" (ngSubmit)="onSubmit()">
   <div class="form-group form-group-default required">
     <input type="text" class="form-control" formControlName="title">
@@ -11,5 +7,5 @@
     <textarea formControlName="note"></textarea>
   </div>
   
-  <button type="submit" [disabled]="!noteForm.valid">Add</button>
+  <button class="button green" type="submit" [disabled]="!noteForm.valid">Add</button>
 </form>
