--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>Disqo Notepad</h1>
+<div class="main-container">
+    <h1>
+        Notepad Application
+    </h1>
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+</div>
