--- a/src/app/notepad/notepad.component.html
+++ b/src/app/notepad/notepad.component.html
@@ -11,6 +11,6 @@
   <app-add-note (addNote)="addNote($event)"></app-add-note>
 
   <ng-container *ngIf="notepad">
-    <app-edit-note (deleteNote)="deleteNote($event)" *ngFor="let note of notepad.notes" [note]="note"> </app-edit-note>
+    <app-edit-note (deleteNote)="deleteNote($event)" (updateNote)="updateNote($event)" *ngFor="let note of notepad.notes" [note]="note"> </app-edit-note>
   </ng-container>
 </div>
