--- a/src/app/notepad/edit-note/edit-note.component.html
+++ b/src/app/notepad/edit-note/edit-note.component.html
@@ -7,5 +7,5 @@
     <textarea formControlName="note"></textarea>
   </div>
   
-  <button class="button red" (click)="onDelete()">Delete</button>
+  <button class="button red" (click)="onDelete()" *ngIf="showDeleteButton">Delete</button>
 </form>
