--- a/src/app/notepad/notepad.component.html
+++ b/src/app/notepad/notepad.component.html
@@ -5,12 +5,18 @@
       <input type="text" class="form-control" formControlName="title">
     </div>
 
-    <button class="button blue" type="submit" [disabled]="!notepadForm.valid">Save</button>
+    <button class="button blue" type="submit" [disabled]="!notepadForm.valid || !isTitleUnique || notepad.notes.length > 0">Save</button>
   </form>
 
   <app-add-note (addNote)="addNote($event)"></app-add-note>
 
   <ng-container *ngIf="notepad">
-    <app-edit-note (deleteNote)="deleteNote($event)" (updateNote)="updateNote($event)" *ngFor="let note of notepad.notes" [note]="note"> </app-edit-note>
+    <app-edit-note
+      (deleteNote)="deleteNote($event)" 
+      (updateNote)="updateNote($event)" 
+      *ngFor="let note of notepad.notes"
+      [note]="note" 
+      [showDeleteButton]="notepad.notes.length > 1"
+    > </app-edit-note>
   </ng-container>
 </div>
